--- a/Romanian/main/Music.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Music.apk/res/values-ro/strings.xml
@@ -10,6 +10,7 @@
     <string name="action_item_cancel">Anulaţi</string>
     <string name="action_item_delete">Ştergeţi</string>
     <string name="action_item_download">Descărcaţi</string>
+    <string name="action_item_download_all_cloud">Descărcați toate melodiile</string>
     <string name="action_item_favorite">Favorit</string>
     <string name="action_item_follow">Urmăriţi</string>
     <string name="action_item_hide">Ascundeţi</string>
@@ -29,6 +30,7 @@
     <string name="ad_setting">Setări serviciu reclame</string>
     <string name="add_music">Adăugaţi melodii</string>
     <string name="add_to_last_of_playlist">Adaugă la sfârșitul listei de redare</string>
+    <string name="add_to_playlist_successful">Adăugată cu succes</string>
     <string name="alaka_required">Ar trebui să plătiți pentru a asculta această melodie</string>
     <string name="album_name">Album</string>
     <string name="album_search_title">Album</string>
@@ -53,6 +55,13 @@
     <string name="artist_news">Noutăți</string>
     <string name="artist_search_title">Artist</string>
     <string name="artist_view">Artist</string>
+    <string name="asset_sync_alert_not_now">Nu acum</string>
+    <string name="asset_sync_network_data_alert_message">Crearea unei copii de rezervă pentru melodii utilizând datele mobile poate genera costuri suplimentare. Continuați oricum?</string>
+    <string name="asset_sync_network_data_alert_title">"Utilizați datele mobile"</string>
+    <string name="asset_sync_network_unavailable_alert_message">Conectați-vă la internet pentru a crea o copie de rezervă pentru melodii</string>
+    <string name="asset_sync_network_unavailable_alert_title">"Nu s-a putut conecta la rețea"</string>
+    <string name="asset_sync_power_alert_message">Conectați încărcătorul pentru a crea o copie de rezervă pentru melodii.</string>
+    <string name="asset_sync_power_alert_title">Acumulator descărcat</string>
     <string name="atmd_music">Ultima</string>
     <string name="audio_picker_title">Selectaţi o melodie</string>
     <string name="auth_activity_title">Cont Xunlei</string>
@@ -63,8 +72,12 @@
     <string name="avail_services">Disponibil</string>
     <string name="available_playlist_name_format">Listă de redare nouă %d</string>
     <string name="avoid_to_use_traffic_summary">Nu se utilizează rețeaua de date mobile pentru a reda muzica</string>
-    <string name="avoid_to_use_traffic_title">Se utilizează doar Wi-Fi pentru a reda muzica</string>
+    <string name="avoid_to_use_traffic_title">Notifică-mă atunci când se utilizează datele mobile pentru a reda muzică</string>
     <string name="back_confirm">Apăsați din nou pentru a trimite aplicația în fundal</string>
+    <string name="backup_complete">Toate melodiile sunt sincronizate în Mi Cloud</string>
+    <string name="backup_empty_button">Ați selectat 0 melodii</string>
+    <string name="backup_immediate">Creați o copie de rezervă</string>
+    <string name="backup_song_title">Selectați melodiile pentru care doriți să realizați o copie de rezervă</string>
     <string name="baidu_music">Muzică Baidu</string>
     <string name="being_disable_auto_payment">Dezactivare…</string>
     <string name="being_enable_auto_payment">Activare…</string>
@@ -94,15 +107,28 @@
     <string name="click_to_shuffle">Atingeţi pentru a amesteca toate</string>
     <string name="click_to_view_new_local_audios">Apăsați pentru a vizualiza detaliile.</string>
     <string name="close_music_time">"Timp rămas: "</string>
+    <string name="cloud_empty_local_empty_button">Nicio melodie pe acest telefon</string>
+    <string name="cloud_empty_message">Nicio melodie în Mi Cloud</string>
+    <string name="cloud_empty_summary">Creați o copie de rezervă a melodiilor în Mi Cloud pentru a le putea accesa și de pe alte dispozitive</string>
     <string name="cloud_enable">Sincronizare muzică cu Mi Cloud</string>
+    <string name="cloud_loading_message">Căutare melodii...</string>
+    <string name="cloud_music">Muzică în Cloud</string>
     <string name="cloud_settings">Setări sincronizare</string>
     <string name="cloud_space_full">Nu mai există spațiu de stocare disponibil</string>
     <string name="cloud_space_full_message">Nu mai există spațiu în Mi Cloud pentru a adăuga melodii noi. Pentru a obține spațiu de stocare suplimentar, actualizați contul Mi.</string>
+    <string name="cloud_state_cloud_space_full">Nu există spațiu de stocare suficient în Mi Cloud, sincronizarea s-a oprit</string>
+    <string name="cloud_state_low_power">Conectați încărcătorul pentru a relua sincronizarea</string>
+    <string name="cloud_state_network_data">Nu s-a găsit rețeaua Wi-Fi, sincronizarea s-a oprit</string>
+    <string name="cloud_state_network_unavailable">Nu s-a putut conecta la rețea, sincronizarea s-a oprit</string>
+    <string name="cloud_state_storage_full">Nu există suficient spațiu de stocare pe telefon, sincronizarea s-a oprit</string>
+    <string name="cloud_welcome_message">Sincronizați melodiile</string>
+    <string name="cloud_welcome_summary">Sincronizați melodiile în Mi Cloud și redați-le pe alte dispozitive</string>
     <string name="comment_format" formatted="false">%s: %s</string>
     <string name="confirm_delete_downloads_message">%d descărcări vor fi șterse.</string>
     <string name="confirm_delete_the_download_item_message">Ștergeți aceste descărcări?</string>
     <string name="confirm_download">Descărcare</string>
     <string name="confirm_to_renew">Reînnoire</string>
+    <string name="continue_backup">Continuați</string>
     <string name="cp_info_first">"Serviciul de streaming
 este oferit în principal de către Ultimate Inc."</string>
     <string name="cp_info_second">service1@ultimobi.com</string>
@@ -153,6 +179,15 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="dialog_media_not_found">"Nu se poate descărca. Cardul SD nu este disponibil."</string>
     <string name="dialog_not_show_again">"Nu arăta din nou"</string>
     <string name="dialog_queued_body">Acest fișier este în coada de așteptare pentru descărcarea ulterioară.</string>
+    <string name="dialog_song_sort_type">Sortare după</string>
+    <string name="dialog_song_sort_type_name">Nume</string>
+    <string name="dialog_song_sort_type_playing_times">Numărul redărilor</string>
+    <string name="dialog_song_sort_type_time">Dată</string>
+    <string name="dialog_song_view_type">Show type</string>
+    <string name="dialog_song_view_type_album">Album</string>
+    <string name="dialog_song_view_type_artist">Artist</string>
+    <string name="dialog_song_view_type_folder">Dosar</string>
+    <string name="dialog_song_view_type_song">Melodie</string>
     <string name="dialog_title_add_playlist">Adăugaţi o listă de redare</string>
     <string name="dialog_title_delete_tracks">Ştergeţi</string>
     <string name="dialog_title_name_playlist">Nume listă de redare</string>
@@ -320,6 +355,7 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="fragment_title_channel">FM</string>
     <string name="fragment_title_personal">PERSONAL</string>
     <string name="fragment_title_recommend">RECOMANDATE</string>
+    <string name="garbage_cleanup">Curățare</string>
     <string name="global_search_app_name">Muzică</string>
     <string name="global_search_description_entry">Savurați muzică</string>
     <string name="global_search_description_hot">Actualizări săptămânale</string>
@@ -386,6 +422,7 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="list_item_play_FM_radio">Atingeți pentru a porni radio FM</string>
     <string name="list_item_play_all_tracks">Redaţi toate melodiile</string>
     <string name="listview_index_of_total">%1$d/%2$d</string>
+    <string name="load_shuffle">Se încarcă…</string>
     <string name="loadercontainer_loading">Doar o secundă…</string>
     <string name="loading_hint">Doar o secundă…</string>
     <string name="local_music">Muzică locală</string>
@@ -406,6 +443,7 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="lyric_open_other_connect">Descărcaţi versurile utilizând reţeaua mobilă</string>
     <string name="lyric_setting">Setări versuri</string>
     <string name="male_artist">Artişti</string>
+    <string name="manager_cloud_space">Gestionați spațiul de stocare din Mi Cloud</string>
     <string name="max_sleep_time">90</string>
     <string name="media_filter">Fișiere media</string>
     <string name="menu_all_task_pause">Opriți tot</string>
@@ -417,10 +455,17 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="menu_title_settings">Setări</string>
     <string name="message_delete_playlist">Ştergeţi lista de redare %s?</string>
     <string name="metered_alert">Avertisment utilizare date</string>
-    <string name="metered_alert_msg">Utilizarea rețelei de telefonie mobilă pentru a asculta muzică va creşte utilizarea datelor. Dacă treceţi peste limita de utilizare a datelor din planul dvs., operatorul ar putea percepe taxe.</string>
-    <string name="metered_allow">Streaming</string>
-    <string name="metered_disallow">Anulaţi</string>
-    <string name="metered_play_toast">Utilizare conexiune de date mobile pentru a transmite</string>
+    <string name="metered_alert_msg">"Utilizați datele mobile pentru a reda melodii. Continuați oricum?"</string>
+    <string name="metered_alert_msg_with_data">Mai aveți %s din traficul de date mobile rămas. Utilizați datele mobile pentru a reda melodii?</string>
+    <string name="metered_allow">Redați</string>
+    <string name="metered_disallow">Nu acum</string>
+    <string name="metered_play_toast">Utilizare conexiune de date mobile pentru a reda melodiile</string>
+    <string name="metered_play_toast_with_beyond_data">Se utilizează datele mobile pentru a reda melodii. S-a depășit limita cu %s</string>
+    <string name="metered_play_toast_with_data">Se utilizează datele mobile pentru a reda melodii, %s disponibil</string>
+    <string name="metered_serious_alert">Prea puțin trafic de date disponibil</string>
+    <string name="metered_serious_alert_msg_with_beyond_data">"Ați depășit deja limita de trafic prin date mobile cu %s. Utilizați datele mobile pentru a reda melodii?"</string>
+    <string name="metered_serious_alert_msg_with_data">Mai aveți doar %s date mobile disponibile. Utilizați datele mobile pentru a reda melodii?</string>
+    <string name="metered_serious_allow">Redați oricum</string>
     <string name="milink_unavaliable_please_update">"Funcția Milink nu este disponibilă. Trebuie să actualizați MIUI."</string>
     <string name="min_sleep_time">1</string>
     <string name="missing_title">&lt;Necunoscut&gt;</string>
@@ -539,6 +584,7 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="online_music_enabled_subtitle">Atingeți pentru a reda în flux melodiile preferate.</string>
     <string name="online_music_enabled_summary">Ascultaţi și descărcaţi melodiile preferate. Vizualizaţi melodiile de top și listele de redare organizate oriunde aţi merge!</string>
     <string name="online_music_enabled_title">Streaming-ul gratuit este aici</string>
+    <string name="online_my">Proprie?</string>
     <string name="online_playlist_is_empty">Listă de redare goală</string>
     <string name="online_recommend">Listă de redare</string>
     <string name="online_special">Speciale</string>
@@ -613,6 +659,7 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="radar_searching_state">Căutare în curs...</string>
     <string name="radar_support_by">Oferit de ACRCloud</string>
     <string name="really_pay">Achitaţi acum?</string>
+    <string name="recently_played">Redată recent</string>
     <string name="recommend_fragment_title">Recomandate</string>
     <string name="recommended_file_size_download_in_mobile">Utilizați %s din datele mobile pentru a descărca acest fișier?</string>
     <string name="recommended_no_file_size_download_in_mobile">Utilizați conexiunea de date mobile pentru a descărca acest fișier?</string>
@@ -635,9 +682,12 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="root_downloads">Descărcări</string>
     <string name="save_to_playlist">Salvați ca listă de redare</string>
     <string name="search_album">Căutare albume</string>
+    <string name="search_empty">Niciun rezultat. Vă rugăm să încercați alte cuvinte</string>
     <string name="search_for_album">Album</string>
     <string name="search_for_artist">Artist</string>
-    <string name="search_hint">Căutare muzică</string>
+    <string name="search_hint">Căutați artiști, melodii, albume, recomandări</string>
+    <string name="search_history_clear_all">Goliți</string>
+    <string name="search_instant_online_music">Online</string>
     <string name="search_lyric">Căutare versuri</string>
     <string name="search_title">Căutaţi</string>
     <string name="search_title_album">Albume</string>
@@ -697,6 +747,7 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="share_text_list">"Listă de redare din Muzică Mi: "</string>
     <string name="share_text_song">"Melodie în Muzică Mi: "</string>
     <string name="show_more">Arătați %s în plus</string>
+    <string name="shuffle_music">Amestecați lista de redare</string>
     <string name="shuffle_off_notif">Amestecare melodii dezactivată.</string>
     <string name="shuffle_on_notif">Amestecare melodii activată.</string>
     <string name="similar_songs">Melodii similare</string>
@@ -719,6 +770,8 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="start_to_play">Redaţi</string>
     <string name="start_to_use">Porniți aplicația Muzică</string>
     <string name="start_update">Actualizați aplicația Muzică la cea mai recentă versiune.</string>
+    <string name="stop">Stop</string>
+    <string name="stop_backup">Stop</string>
     <string name="storage_internal">Stocare internă</string>
     <string name="storage_sd_card">Card SD</string>
     <string name="storage_usb">Stocare USB</string>
