--- a/Romanian/main/XMRemoteController.apk/res/values-ro/strings.xml
+++ b/Romanian/main/XMRemoteController.apk/res/values-ro/strings.xml
@@ -116,7 +116,7 @@
     <string name="brand_title_hot">Populare</string>
     <string name="brand_title_other">Altele</string>
     <string name="broadcast">emiteți</string>
-    <string name="btn_connected_stb">Decodor</string>
+    <string name="btn_connected_stb">Controlare decodor</string>
     <string name="bullet_hint">Afișați acest mesaj pe ecran</string>
     <string name="bulletin">Comentarii pe ecran</string>
     <string name="by">"Susținut de "</string>
