--- a/Romanian/main/XiaomiAccount.apk/res/values-ro/strings.xml
+++ b/Romanian/main/XiaomiAccount.apk/res/values-ro/strings.xml
@@ -160,6 +160,7 @@
     <string name="multi_user_not_show_sync_activity_message_2">"În acest caz, toate datele vor fi sincronizate cu cele din spațiul secundar. Pentru a evita acest lucru, nu activați sincronizarea cu Mi Cloud"</string>
     <string name="multi_user_not_show_sync_activity_title">"Nu activați sincronizarea cu Mi Cloud"</string>
     <string name="my_device_title">Dispozitiv actual</string>
+    <string name="my_favorite">Favoritul meu</string>
     <string name="no_network_btn">Reîmprospătaţi</string>
     <string name="no_network_title">Nu se poate conecta la rețea.</string>
     <string name="no_response_retry">Niciun răspuns, reîncercaţi.</string>
@@ -330,6 +331,9 @@ link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="passport_wrong_vcode">Codul introdus nu este corect</string>
     <string name="phone_activated">%s activat</string>
     <string name="photoPickerNotFoundText">Nicio fotografie disponibilă.</string>
+    <string name="push_notification_content">Atingeți și obțineți codul de verificare</string>
+    <string name="push_notification_title">Vă conectați la contul Mi de pe un dispozitiv necunoscut</string>
+    <string name="push_notify_dialog_title">Verificare securitate conectare</string>
     <string name="qq">QQ</string>
     <string name="remove_device_success_notice">Dacă eliminați acest dispozitiv din lista dispozitivelor de încredere, ar putea fi necesar să parcurgeţi din nou procesul de verificare atunci când vă conectați.​</string>
     <string name="remove_trust_btn">Eliminați din lista dispozitivelor de încredere</string>
@@ -350,28 +354,28 @@ link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="search_account_protection">Protejarea contului</string>
     <string name="search_account_protection_desc">Protejarea contului</string>
     <string name="search_account_protection_key_words">Protejarea contului</string>
-    <string name="search_account_protection_path">Contul Mi/Protejarea contului,Setări/Contul Mi/Protejarea contului</string>
+    <string name="search_account_protection_path">Setări/Contul Mi/Protejarea contului</string>
     <string name="search_app_name">Contul Mi</string>
     <string name="search_bind_Account">Conturi</string>
     <string name="search_bind_Account_desc">Conturi</string>
     <string name="search_bind_Account_key_words">Conturi,Sina Weibo,QQ,Autorizare</string>
-    <string name="search_bind_Account_path">Contul Mi/Conturi,Setări/Contul Mi/Conturi</string>
+    <string name="search_bind_Account_path">Setări/Contul Mi/Conturi</string>
     <string name="search_devices">Dispozitive</string>
     <string name="search_devices_desc">Dispozitive</string>
     <string name="search_devices_key_words">Dispozitive</string>
-    <string name="search_devices_path">Contul Mi/Dispozitive,Setări/Contul Mi/Dispozitive</string>
+    <string name="search_devices_path">Setări/Contul Mi/Dispozitive</string>
     <string name="search_logout_account">Deconectare</string>
     <string name="search_logout_account_desc">Contul Mi</string>
     <string name="search_logout_account_key_words">Deconectare</string>
-    <string name="search_logout_account_path">Contul Mi,Setări/Contul Mi</string>
+    <string name="search_logout_account_path">Setări/Contul Mi</string>
     <string name="search_mi_account">Contul Mi</string>
     <string name="search_mi_account_desc">Contul Mi</string>
     <string name="search_mi_account_key_words">Contul Mi,Conectare,creare cont,Mi Cloud,Credite Mi,Portofel Mi,Paşaport Mi,Asigurare Mi,Setare cont,Gestionare cont</string>
-    <string name="search_mi_account_path">Contul Mi,Setări/Contul Mi</string>
+    <string name="search_mi_account_path">Setări/Contul Mi</string>
     <string name="search_user_detail">Informaţii personale</string>
     <string name="search_user_detail_bottom_key_words">Schimbare telefon,Modificare e-mail,Modificare venit,Modificare nivel educație,Modificare locație,Modificare regiune</string>
     <string name="search_user_detail_desc">Informații personale</string>
-    <string name="search_user_detail_path">Contul Mi/Informații personale,Setări/Contul Mi/Informații personale</string>
+    <string name="search_user_detail_path">Setări/Contul Mi/Informații personale</string>
     <string name="search_user_detail_top_key_words">Informații personale,Modificare fotografie de profil,Modificare nume utilizator,Modificare pseudonim,Modificare dată de naștere,Modificare sex</string>
     <string name="security_question">Selectați întrebarea</string>
     <string name="security_question_answer">Introduceți răspunsul</string>
