--- a/Romanian/main/YellowPage.apk/res/values-ro/strings.xml
+++ b/Romanian/main/YellowPage.apk/res/values-ro/strings.xml
@@ -379,6 +379,9 @@ Total: %3$s RMB"</string>
     <string name="remind_user_suspect_number_title">Număr suspect</string>
     <string name="rmb">RMB</string>
     <string name="scan">Scanați</string>
+    <string name="search_description_express">Primiți sau trimiteți expres mai rapid și mai ușor</string>
+    <string name="search_keywords_express">express;shunfeng;shentong;debang;kuaidi;danhao;</string>
+    <string name="search_title_express">Primiți sau trimiteți expres</string>
     <string name="select_package_before_buy">Selectați pachetul</string>
     <string name="send_shortcut_failed">"Nu s-a putut trimite"</string>
     <string name="send_shortcut_success">Plasat pe ecranul principal</string>
